# amr-portal

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  package-lock.json
.github/workflows/: build-and-push-gitlab.yml  build-and-push-quay.yml
backend/: .dockerignore  .env.example  BACKEND_ARCHITECTURE_WALKTHROUGH.md  Dockerfile  main.py  pyproject.toml
backend/api/: docs_chrome.py  endpoints.py
backend/core/: config.py  constants.py  database.py  duckdb_conn.py  encoding.py  filters_config_parser.py  serialization.py  sql_utils.py  streaming.py  utils.py
backend/core/sql/: __init__.py  duckdb.py  filters.py  filters_config.py  global_search.py  release.py
backend/models/: amr_records.py  facets.py  filters_config.py  payload.py  release.py
backend/services/: filters.py  global_search.py  release.py
backend/services/filters/: __init__.py  export.py  facets.py  metadata.py  query_builder.py  records.py
backend/static/ninja/: swagger-ui-custom-init.js  swagger-ui-custom.css
backend/tests/: conftest.py  test_cors_config.py  test_duckdb_conn.py  test_encoding.py  test_endpoints.py  test_filters.py  test_global_search.py  test_serialization.py  test_serializer.py  test_sql_utils.py  test_streaming.py
docs/decisions/: 003-frontend-build.md
frontend/: .env.example  Dockerfile  README.md  eleventy.config.js  merge-frontend-dist.sh  package-lock.json  package.json  vite.config.ts
frontend-react/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-react/nginx-conf/: local.conf
frontend-react/src/: App.tsx
frontend/nginx-conf/: local.conf  mime.types  nginx.conf
frontend/src/: App.module.css  App.tsx  index.tsx  vite-env.d.ts
global-search/: README.md  pyproject.toml  rebuild_global_search.py
global-search/amr_global_search/: __init__.py  build.py  duckdb_ext.py
global-search/sql/: 00_optional_session_settings.sql  01_create_table.sql  02_create_fts_index.sql  03_manual_test_queries.sql  04_efficient_search_queries.sql
global-search/tests/: test_build.py
k8s/: copy-pod.yml  images.env  ingress.yaml  kustomization.yaml
k8s/backend/: amr-portal-data-pv.yaml  amr-portal-namespace.yaml  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
k8s/dev/: images.env  (+1 more)
portal-app/: Dockerfile  README.md  merge-frontend-dist.sh  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
portal-static/: .dockerignore  Dockerfile  eleventy.config.js  package-lock.json  package.json
postman/: AMR Data Portal.postman_collection.json  build_collection.py
(+188 files in other folders)
