[project]
name = "amr-portal-backend"
version = "0.1.0"
description = "FastAPI backend for the AMR portal"
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb==1.3.2",
    "fastapi==0.116.1",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "pydantic-settings==2.10.1",
    "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.1",
]

[tool.uv]
package = false
