[project]
name = "amr-portal-backend"
version = "0.1.0"
description = "FastAPI backend for the AMR portal"
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb==1.3.2",
    "fastapi==0.125.0",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "pydantic-settings==2.10.1",
    "starlette>=0.49.1",
    "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "B008",  # Depends() in FastAPI route defaults is intentional
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402", "E501"]  # sys.path bootstrap; long Swagger HTML strings
"api/docs_chrome.py" = ["E501"]  # embedded HTML templates
"api/endpoints.py" = ["E501"]  # OpenAPI description strings

[tool.ruff.lint.isort]
known-first-party = ["api", "core", "models", "services"]

[tool.uv]
package = false
