[project]
name = "amr-global-search"
version = "0.1.0"
description = "Build global_search table and DuckDB FTS index for the AMR portal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
